<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- 预览区 -->
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#D7DEE5">
        <!-- 系统区-重置按钮 -->
        <Button
                android:id="@+id/bt_dialog_draw_setting_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_dialog_draw_setting_system_reset"
                android:layout_alignParentLeft="true"/>
        <!-- 系统区-关闭按钮 -->
        <Button
                android:id="@+id/bt_dialog_draw_setting_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_dialog_draw_setting_system_close"
                android:layout_alignParentRight="true"/>
        <org.maxwe.android.drawpad.Preview
                android:id="@+id/drawpad_preview"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:layout_centerInParent="true"/>

    </RelativeLayout>

    <!-- 功能区 -->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#FFFFFF">
        <!-- 图形选择 -->
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/bt_dialog_draw_setting_graphics_any_line"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_dialog_draw_setting_graphics_line_any"/>
            <Button
                    android:id="@+id/bt_dialog_draw_setting_graphics_straight_line"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_dialog_draw_setting_graphics_line_straight"/>
            <Button
                    android:id="@+id/bt_dialog_draw_setting_graphics_perfect_circle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_dialog_draw_setting_graphics_circle_perfect"/>
            <Button
                    android:id="@+id/bt_dialog_draw_setting_graphics_ellipse"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_dialog_draw_setting_graphics_circle_ellipse"/>
            <Button
                    android:id="@+id/bt_dialog_draw_setting_graphics_right_rectangle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_dialog_draw_setting_graphics_rectangle_right"/>
            <Button
                    android:id="@+id/bt_dialog_draw_setting_graphics_round_rectangle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_dialog_draw_setting_graphics_rectangle_round"/>
        </LinearLayout>

        <!-- 画笔选择 -->
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/bt_dialog_draw_setting_pens_default"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_dialog_draw_setting_pens_default"/>
            <Button
                    android:id="@+id/bt_dialog_draw_setting_pens_dotted"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_dialog_draw_setting_pens_dotted"/>
            <Button
                    android:id="@+id/bt_dialog_draw_setting_pens_blur"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_dialog_draw_setting_pens_blur"/>
            <Button
                    android:id="@+id/bt_dialog_draw_setting_pens_emboss"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_dialog_draw_setting_pens_emboss"/>
            <Button
                    android:id="@+id/bt_dialog_draw_setting_pens_eraser"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_dialog_draw_setting_pens_eraser"/>
        </LinearLayout>

        <!-- 颜色选择 -->
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#D7DEE5">
            <org.maxwe.android.drawpad.activities.ColorPickerView
                    android:id="@+id/drawpad_setting_color"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"/>

        </LinearLayout>

        <!-- 其他选择 -->
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <SeekBar
                    android:id="@+id/sb_dialog_draw_setting_seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="50"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>
            <Switch
                    android:id="@+id/sw_dialog_draw_setting_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="填充"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>